<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/table_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/table_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/table_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/team_position"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/position"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/team"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_played"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/played"
                android:gravity="center" />

            <TextView
                android:id="@+id/team_won"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/won"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/team_drawn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/draw"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/team_lost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lost"
                android:gravity="center" />

            <TextView
                android:id="@+id/team_for"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goals_for"
                android:gravity="center" />

            <TextView
                android:id="@+id/team_against"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goals_againts"
                android:gravity="center" />

            <TextView
                android:id="@+id/team_points"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/points"
                android:gravity="center" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/table_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/table_head"
            android:layout_gravity="top"
            android:layout_margin="5dp"
            android:layout_weight="0.8"
            >

        </android.support.v7.widget.RecyclerView>


    </RelativeLayout>




</LinearLayout>